--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		});
 	</script>
 </head>
-<body style="font-size: 14px; margin: 0;" ng-app="app" ng-controller="app">
+<body style="font-size: 14px; margin: 0; background-color: #FEC" ng-app="app" ng-controller="app">
 
 	<desk-menu desk-keypress callback="cb(value)">
 		<desk-option>
@@ -33,7 +33,7 @@
 					<desk-icon><i class="fa fa-car"></i></desk-icon>
 					<desk-label>Bil</desk-label>
 					<desk-dropdown>
-						<desk-dd-option desk-value="val">
+						<desk-dd-option desk-value="val" shortcut="Ctrl-Alt-X">
 							<desk-icon><i class="fa fa-bell-o"></i></desk-icon>
 							<desk-label>Bell</desk-label>
 						</desk-dd-option>
